--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -5,6 +5,7 @@ on:
 
 permissions:
   packages: write
+  contents: read
 
 jobs:
   deploy_image:
@@ -41,6 +42,8 @@ jobs:
       name: dev
     needs: deploy_image
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
         with:
