--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -34,6 +34,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          build-args: |
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
           tags: |
             ghcr.io/swc-unnamed/holochain:latest
             ghcr.io/swc-unnamed/holochain:${{ github.sha }}
