--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
-    "dev:trigger": "bunx trigger.dev@latest dev",
+    "dev": "bunx --bun vite --host",
     "build": "bunx --bun vite build",
     "preview": "bunx --bun vite preview",
     "prepare": "svelte-kit sync || echo ''",
@@ -28,7 +27,6 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/table-core": "^8.20.5",
-    "@trigger.dev/build": "4.1.2",
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.19.1",
@@ -67,10 +65,10 @@
     "@dicebear/core": "^9.2.4",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
-    "@trigger.dev/sdk": "4.1.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "inngest": "^3.46.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.6",
     "nprogress": "^0.2.0",
