--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "svelte": "^5.44.1",
+    "svelte": "^5.46.1",
     "svelte-check": "^4.3.4",
     "svelte-sonner": "^1.0.7",
     "sveltekit-sse": "^0.14.3",
@@ -68,6 +68,7 @@
     "@prisma/client": "^7.2.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "inngest": "^3.48.1",
     "jsonwebtoken": "^9.0.3",
