--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Trigger Coolify deployment
         run: |
-          curl --request GET ${{secrets.COOLIFY_WEBHOOK}} --header 'Authorization: Bearer ${{secrets.COOLIFY_TOKEN}}'
+          curl --request GET '${{ secrets.COOLIFY_WEBHOOK }}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
 
       - name: Wait for deployment
         run: |
