feat: add metrics

--- a/example.env
+++ b/example.env
@@ -1,18 +1,28 @@
 NODE_ENV="development"
+PUBLIC_NODE_ENV="development"
 
+# SENTRY CONFIG - OPTIONAL
+PUBLIC_SENTRY_DSN=""
+PUBLIC_SENTRY_ENV="local"
 
-ORIGIN="http://localhost:5173"
 ENCRYPTION_KEY="your-encryption-key-here"
 JWT_SECRET="your-jwt-secret-here"
 
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/holochaindb"
 
+ORIGIN="http://localhost:5173"
 COMBINE_CLIENT_ID=""
 COMBINE_SECRET_KEY=""
 
 SUPER_ADMIN_PASSWORD="superadmin"
 
+# INNGEST CONFIG
 INNGEST_SIGNING_KEY=""
 INNGEST_EVENT_KEY=""
 INNGEST_BASE_URL="http://localhost:8288"
 INNGEST_INSTANCE_ENV="local"
+
+# SENTRY CONFIG - OPTIONAL
+SENTRY_DSN=""
+SENTRY_AUTH_TOKEN=""
+SENTRY_ENV="local"
