--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "pg-listen": "^1.7.0",
     "prisma": "^7.2.0",
     "svelte-adapter-bun": "^1.0.1",
+    "swcombine-sdk": "^1.2.1",
     "zod": "^4.2.1"
   }
 }
