--- a/package.json
+++ b/package.json
@@ -1,85 +1,86 @@
 {
-  "name": "holochain",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "bunx --bun vite --host",
-    "build": "bunx --bun vite build",
-    "preview": "bunx --bun vite preview",
-    "prepare": "svelte-kit sync || echo ''",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "db:seed": "bun --env-file=.env ./prisma/seed/seed.ts",
-    "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
-  },
-  "devDependencies": {
-    "@eslint/compat": "^2.0.0",
-    "@eslint/js": "^9.39.2",
-    "@iconify/svelte": "^5.1.0",
-    "@internationalized/date": "^3.10.1",
-    "@lucide/svelte": "^0.562.0",
-    "@sveltejs/adapter-auto": "^7.0.0",
-    "@sveltejs/kit": "^2.49.0",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tailwindcss/forms": "^0.5.11",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/table-core": "^8.20.5",
-    "@types/bun": "^1.3.5",
-    "@types/crypto-js": "^4.2.2",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.19.3",
-    "@types/nprogress": "^0.2.3",
-    "bits-ui": "^2.14.4",
-    "clsx": "^2.1.1",
-    "embla-carousel-svelte": "^8.6.0",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.12.4",
-    "formsnap": "^2.0.1",
-    "globals": "^16.4.0",
-    "layerchart": "2.0.0-next.27",
-    "mode-watcher": "^1.1.0",
-    "paneforge": "^1.0.2",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.7.1",
-    "svelte": "^5.46.1",
-    "svelte-check": "^4.3.4",
-    "svelte-sonner": "^1.0.7",
-    "sveltekit-sse": "^0.14.3",
-    "tailwind-merge": "^3.4.0",
-    "tailwind-variants": "^3.2.2",
-    "tailwindcss": "^4.1.18",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0",
-    "vaul-svelte": "^1.0.0-next.7",
-    "vite": "^7.3.0",
-    "vite-plugin-devtools-json": "^1.0.0"
-  },
-  "dependencies": {
-    "@akcodeworks/svelte-command-form": "^0.1.1",
-    "@dicebear/collection": "^9.2.4",
-    "@dicebear/core": "^9.2.4",
-    "@opentelemetry/api": "^1.9.0",
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
-    "@sentry/sveltekit": "^10",
-    "crypto-js": "^4.2.0",
-    "date-fns": "^4.1.0",
-    "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
-    "inngest": "^3.48.1",
-    "jsonwebtoken": "^9.0.3",
-    "nanoid": "^5.1.6",
-    "nprogress": "^0.2.0",
-    "pg-listen": "^1.7.0",
-    "prisma": "^7.2.0",
-    "svelte-adapter-bun": "^1.0.1",
-    "swcombine-sdk": "^1.2.1",
-    "zod": "^4.2.1"
-  }
+	"name": "holochain",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "bunx --bun vite --host",
+		"build": "bunx --bun vite build",
+		"preview": "bunx --bun vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"db:seed": "bun --env-file=.env ./prisma/seed/seed.ts",
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint ."
+	},
+	"devDependencies": {
+		"@eslint/compat": "^2.0.0",
+		"@eslint/js": "^9.39.2",
+		"@iconify/svelte": "^5.1.0",
+		"@internationalized/date": "^3.10.1",
+		"@lucide/svelte": "^0.562.0",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/kit": "^2.49.0",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/forms": "^0.5.11",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/table-core": "^8.20.5",
+		"@types/bun": "^1.3.5",
+		"@types/crypto-js": "^4.2.2",
+		"@types/jsonwebtoken": "^9.0.10",
+		"@types/node": "^22.19.3",
+		"@types/nprogress": "^0.2.3",
+		"bits-ui": "^2.14.4",
+		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.6.0",
+		"eslint": "^9.39.1",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.12.4",
+		"formsnap": "^2.0.1",
+		"globals": "^16.4.0",
+		"layerchart": "2.0.0-next.27",
+		"mode-watcher": "^1.1.0",
+		"paneforge": "^1.0.2",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.7.1",
+		"svelte": "^5.46.1",
+		"svelte-check": "^4.3.4",
+		"svelte-sonner": "^1.0.7",
+		"sveltekit-sse": "^0.14.3",
+		"tailwind-merge": "^3.4.0",
+		"tailwind-variants": "^3.2.2",
+		"tailwindcss": "^4.1.18",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.50.0",
+		"vaul-svelte": "^1.0.0-next.7",
+		"vite": "^7.3.0",
+		"vite-plugin-devtools-json": "^1.0.0"
+	},
+	"dependencies": {
+		"@akcodeworks/svelte-command-form": "^0.1.1",
+		"@dicebear/collection": "^9.2.4",
+		"@dicebear/core": "^9.2.4",
+		"@opentelemetry/api": "^1.9.0",
+		"@prisma/adapter-pg": "^7.2.0",
+		"@prisma/client": "^7.2.0",
+		"crypto-js": "^4.2.0",
+		"date-fns": "^4.1.0",
+		"discord.js": "^14.25.1",
+		"dotenv": "^17.2.3",
+		"inngest": "^3.48.1",
+		"jsonwebtoken": "^9.0.3",
+		"nanoid": "^5.1.6",
+		"nprogress": "^0.2.0",
+		"pg-listen": "^1.7.0",
+		"posthog-js": "^1.315.0",
+		"posthog-node": "^5.19.0",
+		"prisma": "^7.2.0",
+		"svelte-adapter-bun": "^1.0.1",
+		"swcombine-sdk": "^1.2.1",
+		"zod": "^4.2.1"
+	}
 }
