--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,5 +17,15 @@ services:
     ports:
       - "8288:8288"
 
+  valkey:
+    image: valkey/valkey:latest
+    container_name: valkey
+    ports:
+      - "6379:6379"
+    volumes:
+      - valkey_data:/data
+    command: ["valkey-server", "--save", "60", "1", "--loglevel", "warning"]
+
 volumes:
   db_data:
+  valkey_data:
