--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@opentelemetry/api": "^1.9.0",
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@valkey/valkey-glide": "^2.2.5",
 		"crypto-js": "^4.2.0",
 		"date-fns": "^4.1.0",
 		"discord.js": "^14.25.1",
